fixed testimonial spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4148,7 +4148,7 @@ input, select, textarea {
 	}
 	.content_2 {
 		position: relative;
-		padding-left: 10px;
+		padding-left: 20px;
 		padding-right: 20px;
 		margin-bottom: 30px;
 	}
